--- a/README.adoc
+++ b/README.adoc
@@ -4,6 +4,10 @@
 
 == Contexte
 
+Etudiants : 
+- Dylan Latapie
+- Maël Carrié
+
 Le but de ce TD/TP est de vous montrer des exemples de traces formelles entre les différents artefacts de votre application (des exigences jusqu'au code).
 
 .Les principaux artefacts qui nous intéressent en  R3-03 (Inspiré de https://github.com/xblanc33/QualiteDev/[ici])
